# mini_agent

./: .gitignore  README.md  agent.py  config.py  main.py  mini_agent.json  pyproject.toml  pytest.ini  system.md  voice_main.py
docs/: voice-agent-architecture.md
llm/: openai.py
src/: cli_agent.py  mini_agent.py
src/prompts/: __init__.py  voice_prompt.py
src/tools/: ask_user_tool.py  edge_tts.py  file.py  shell.py  tool_base.py  weather_tool.py
src/types/: state.py
src/voice/: __init__.py  agent.py  config.py  io.py  ui.py
tests/: test_agent_tts.py  test_ask_user_tool.py  test_edge_tts_tool.py  test_file_tools.py  test_openai_like.py  test_shell_tool.py  test_voice_agent.py
tools/: ask_user_tool.py  edge_tts.py  file.py  shell.py  tool_base.py  weather_tool.py
