[project]
name = "mini-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "edge-tts>=7.2.3",
    "fish-audio-sdk[utils]>=1.3.0",
    "openai>=2.24.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.5",
    "pyobjc-framework-avfoundation>=12.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "rich>=14.3.3",
]
